# RAG-Chatbot-Microservice

./: Dockerfile  README.md  pyproject.toml  test.txt
.github/workflows/: deploy.yml
app/: main.py  schemas.py
app/db/: models.py  session.py
app/services/: cache.py  chatbot.py
data/vectorstore/0912d3a5-958b-486b-be8f-ac55860e48c3/: chroma.sqlite3
data/vectorstore/82fdee26-2b88-44a4-9e7d-c4c189e8eb73/: chroma.sqlite3
data/vectorstore/d86327b7-4bb0-4727-9648-3abd960319e1/: chroma.sqlite3
data/vectorstore/d9127f60-075e-486b-8d62-aad9702a0665/: chroma.sqlite3
data/vectorstore/deb116d8-9a38-42ff-9817-d9f82b336923/: chroma.sqlite3
docs/: API.md  EXAMPLES.md  SETUP.md
src/: main.py
