[tool.poetry]
name = "rag-chatbot-service"
version = "0.1.0"
description = "RAG Chatbot Microservice"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
langchain = "^0.0.335"
google-cloud-storage = "^2.13.0"
google-cloud-firestore = "^2.13.1"
pulsar-client = "3.5.0"
chromadb = "^0.4.18"
openai = "^1.3.5"
python-multipart = "^0.0.6"
pydantic = "^2.5.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3